# rust_practice

./: Cargo.toml  README.md
e01_validation/: Cargo.toml
e02_rbatis/: Cargo.toml
e02_rbatis/src/: main.rs
e03_const_fn/: Cargo.toml
e03_const_fn/src/: main.rs
e04_monadic/: Cargo.toml
e04_monadic/src/: main.rs
e05_bitflags/: Cargo.toml
e05_bitflags/src/: main.rs
examples/01_validation/: main.rs
examples/02_rbatis/: main.rs
