[package]
name = "e02_rbatis"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.6.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
fast_log="1.3"
bigdecimal = "0.2"
rbatis = "1.8.85"
validator = { version = "0.13.0", features = ["derive"] }
derive_builder = "0.10.2"
